[tool.poetry]
name = "entity-extraction-intro"
version = "0.1.0"
description = "Entity Extraction with Large Language Models (LLMs)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.52.2"
pydantic = "^2.9.2"
jupyter = "^1.1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
